# projects

./: CommunicationState.h  Context.h  ErrorState.cpp  ErrorState.h  InitializationState.h  State.h
design_patterns/state_machine/: CMakeLists.txt  CommunicationState.cpp  Context.cpp  InitializationState.cpp  main.cpp
design_patterns/strategy/: CMakeLists.txt  Character.h  King.h  Queen.h  Troll.h  WeaponBehavior.h  Weapons.h  main.cpp
